<?xml version="1.0"?>
<package>
  <name>gui</name>
  <version>0.0.0</version>
  <description>The gui package</description>

  <maintainer email="ianjasonmin@gmail.com">nsm</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>bebop_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>libsdl2-dev</build_depend>
  <build_depend>libsdl2-ttf-dev</build_depend>

  <run_depend>geometry_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>bebop_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>libsdl2-dev</run_depend>
  <run_depend>libsdl2-ttf-dev</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
