<?xml version="1.0"?>
<package>
  <name>bebop_command</name>
  <version>0.1.0</version>
  <description>cluster flight system</description>

  <maintainer email="jullot07@naver.com"> CHUN</maintainer>


  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>bebop_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>libsdl2-dev</build_depend>
  <build_depend>libsdl2-ttf-dev</build_depend>

  <run_depend>geometry_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>bebop_msgs</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>libsdl2-dev</run_depend>
  <run_depend>libsdl2-ttf-dev</run_depend>

  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
